pemFioi/quickAlgo/quickAlgo-mobileFirst.css
/* ... */
body.blockly > *,
body > * {
  width: auto;
}
* {
  box-sizing: border-box;
}

.interfaceToggled {
  display: none !important;
}

/*****************
  EDITOR MENU
*****************/
#tabsContainer.noLevelTabs {
  justify-content: flex-end;
}
#openEditorMenu {
  position: relative;
  background-color: #4a4a4a;
  padding: 8px 13px;
  border-radius: 5px 0 0 5px;
  color: #fff;
  cursor: pointer;
  order: 1;
  font-size: 12px;
}
@media screen and (orientation: landscape) { /* horizontal screen layout */
  #openEditorMenu {
    /*align-self: flex-end;*/
  }
}
@media screen and (min-width: 1024px) {
  #openEditorMenu {
    /*align-self: flex-end;*/
  }
}
#openEditorMenu::before,
#openEditorMenu::after {
  content: " ";
  position: absolute;
  right: 0;
  width: 10px;
  height: 10px;
  background: transparent;
}
#openEditorMenu::before {
  top: -10px;
  border-radius: 50% 0;
  box-shadow: 0px 5px 0 #4a4a4a;
}
#openEditorMenu::after {
  bottom: -10px;
  border-radius: 0 50%;
  box-shadow: 0px -5px 0 #4a4a4a;
}
#editorMenu {
  height: 100%;
  position: absolute;
  right: -50%;
  width: 50%;
  top: 0;
  box-shadow: 2px 0 0 #000 inset;
  background-color: #4a4a4a;
  color: #FFF;
  z-index: 99;
}
#editorMenu .editorMenuHeader {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 12px 20px;
  z-index: 1;
  text-transform: uppercase;
  font-weight: bold;
}

@media /* Tablets and desktop */
  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
  screen and (min-width: 855px) and (orientation: landscape) {
  #editorMenu {
    width: 250px;
    right: -250px;
  }
  #editorMenu .editorMenuHeader {
    position: static;
  }
}
#editorMenu #closeEditorMenu {
  position: absolute;
  top: 15px;
  right: 15px;
  cursor: pointer;
}
#editorMenu #closeEditorMenu:hover {
  color:#4a90e2;
}
#editorMenu .editorActions {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-transform: uppercase;
}
#editorMenu .editorActions div {
  flex: 1 1 0;
  padding: 20px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-top: 1px solid #5c5c5c;
  cursor: pointer;
  text-align: center;
}
#editorMenu .editorActions div.editorActionDisabled,
#editorMenu .editorActions div.editorActionDisabled:hover {
  color: #707070;
}
@media /* Tablets and desktop */
  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
  screen and (min-width: 855px) and (orientation: landscape) {
  #editorMenu .editorActions {
    height: auto;
  }
  #editorMenu .editorActions div {
    flex: 1 1 auto;
  }
}
#editorMenu .editorActions div:first-child {
  border-top-width: 0;
}
#editorMenu .editorActions div:hover {
  color:#4a90e2;
}
#editorMenu .editorActions div span.fas,
#editorMenu .editorActions div span.far {
  font-size: 32px;
}
@media /* Landscape mobiles */
  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
  #editorMenu .editorActions {
    flex-direction: row;
    flex-wrap: wrap;
  }
  #editorMenu .editorActions div {
    flex: 1 1 50%;
    padding: 20px 0;
    font-size: 10px;
    border-right: 1px solid #5c5c5c;
    border-bottom: 1px solid #5c5c5c;
    margin-bottom: -1px;
  }
  #editorMenu .editorActions div:first-child {
    border-top-width: 1px;
  }
}
#editorMenu #saveUrl {
  display: none;
}
#editorMenu input[type=file] {
  cursor: pointer;
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  opacity: 0;
  -moz-opacity: 0;
  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
}

/************************
  LAYOUT & GENERIC ELEMENTS
*************************/
h2.sectionTitle {
  font-size: 22px;
  font-weight: 100;
  color: #4a90e2;
  margin: 0;
}
h2.sectionTitle .icon {
  color: #fff;
  background-color: #4a90e2;
  border-radius: 50%;
  width: 2em;
  line-height: 2em;
  text-align: center;
  font-size: 14px;
  vertical-align: text-bottom;
  margin-right: 10px;
}
p {
  margin: 0 0 15px 0;
}
#task {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  height: 100vh;
  width: 100vw;

}
#taskContent {
  flex: 2 0 0;
  position: static !important;
  display: flex;
  justify-content: stretch;
}
#introGrid {
  display: flex;
  flex: 1 1 40%;
}
#taskIntro {
  padding: 10px 20px;
  overflow: auto;
}
#gridContainer {
  background-color: #fff;
  flex: 1 0 50%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

@media /* Mobiles */
  screen and (max-width: 767px) and (orientation: portrait),
  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
  .mode-player #taskContent {
    flex-direction: column;
  }
  .mode-player #introGrid {
    flex: 1 0 40%;
  }
  .mode-instructions #introGrid {
    flex-direction: column;
    width: 100%;
  }
  .mode-instructions #taskIntro {
    order: 2;
    flex: 1 1 auto;
  }
  .mode-player #taskIntro,
  .mode-instructions #blocklyLibContent,
  .mode-editor #introGrid {
    display: none;
  }
  .mode-player #editorBar {
    display: none !important;
  }
  .mode-instructions .errorMessage,
  .mode-player .errorMessage.errorMessageLock {
    display: none;
  }
}
/* ... */

